@@ -1,1 +1,3 @@
 # CYProject2024
+
+java --module-path C:\Requirements\Java\javafx-sdk-22.0.1\lib --add-modules=javafx.controls,javafx.fxml -jar morphisme.jar
